# candle_graphs

./: Cargo.toml  README.md  out.png.dot  test.py
candle_graph/: Cargo.toml  build.rs
candle_graph/src/: cache.rs  extension.rs  graph.rs  lib.rs
candle_graph/src/kernels/: mod.rs
candle_graph/tests/: ops.rs
candle_graph_examples/: Cargo.toml
candle_graph_examples/examples/attention/: main.rs
candle_graph_examples/examples/cache/: main.rs
candle_graph_examples/examples/matmuls/: main.rs
candle_graph_examples/examples/model/: main.rs
candle_graph_examples/examples/simple_matmul/: main.rs
candle_graph_macro/: Cargo.toml
candle_graph_macro/src/: lib.rs
examples/attention/: main.rs
examples/cache/: main.rs
examples/matmuls/: main.rs
examples/model/: main.rs
examples/simple_matmul/: main.rs
src/: graph.rs  lib.rs  main.rs
src/kernels/: update_kv.cu
tests/: ops.rs
