[workspace]
members = [
    "candle_graph",
    "candle_graph_macro",
    "candle_graph_examples"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
description = "Graph model execution API for Candle"
homepage = "https://github.com/EricLBuehler/candle_graph"
repository = "https://github.com/EricLBuehler/candle_graph"
keywords = ["machine-learning"]
categories = ["science"]
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.89"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.8.0", features = ["cuda"] }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.8.0", features = ["cuda"] }
